--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,8 @@ NEWS/ChangeLog for hydroTSM
         o 'dwi.data.frame'             : 'dates' argument is not required any more
         o 'maptools:::readShapePoly' was replaced by 'maptools::readShapePoly' in all the package (functions 'hydrokrige' and 'mspplot')
         o 'require(xts)' was removed from 'hydroplot'
+        o 'zoo' package removed from 'Imports' and 'Enhances' (due to changes in CRAN policies)
+        o 'xts' package removed from 'Imports' (due to changes in CRAN policies)
 
 0.4-1	31-May-2013
         o DESCRIPTION : 'xts' package was added to the 'Imports' section
