last changes before uploading to CRAN

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
-0.4-2	(under-development)
+0.4-2	21-Jan-2014
         o 'fdc'                        : -) 'lwd' argument is now used (thanks to Bernard Bisselink !)
                                          -) fixed error raised when some element(s) in x were equal to zero, 'plot=TRUE' and 'log=y' or 'log=xy'
                                             (thanks to David Young !). The error was: 
