--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
-0.4-2-5	02-Feb-2015 (under-development version)
+0.4-2-7	04-Feb-2015 (under-development version)
         o repository management moved from SVN to GIT, including rforge.
         o CRAN website removed from URL field in DESCRIPTION file (request from CRAN).
         o 'hydrokrige': deprecated 'overlay' function was replaced by 'over' (from 'sp'package).
@@ -8,12 +8,10 @@ NEWS/ChangeLog for hydroTSM
                           -) 'index' and 'time<-' imported from 'zoo' package.
                           -) 'over', 'coordinates<-', 'proj4string<-' imported from 'sp' package.
         o DESCRIPTION file: 'lattice' package was moved from 'Suggests' to 'Imports' (use of 'levelplot' function in 'matrixplot')
-
-
-0.4-2-3	14-Feb-2014 (under-development version)
         o 'hypsometric' : fixed (very unusual) error: "Error en integrate(f = f, lower = 0, upper = 1) : maximum number of subdivisions reached"
                           (thanks to Jose Martinez Batlle !)
         o 'extract'     : 'trgt' argument allows multiple months or years to be selected (when 'class(trgt) %in% c("integer", "numeric")')
+        o 'fdc'         : 'cex.lab'  argument is working now (thanks to Elcin Tan !).
 
 0.4-2-1	22-Jan-2014 (after CRAN comments)
         o 'Author' field was removed from DESCRIPTION file
