hydrokrige: 'require(maptools)' was replace by 'requireNamespace(maptools, quietly = TRUE)'

--- a/NEWS
+++ b/NEWS
@@ -1,13 +1,16 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
-0.4-2-7	04-Feb-2015 (under-development version)
+0.4-2-8	04-Feb-2015 (under-development version)
         o repository management moved from SVN to GIT, including rforge.
         o CRAN website removed from URL field in DESCRIPTION file (request from CRAN).
-        o 'hydrokrige': deprecated 'overlay' function was replaced by 'over' (from 'sp'package).
+        o 'hydrokrige'  : -) deprecated 'overlay' function was replaced by 'over' (from 'sp'package).
+                          -) 'require(maptools)' was replace by 'requireNamespace("maptools", quietly = TRUE)'
         o NAMESPACE file: -) 'plot.xts' imported from 'xts' package.
                           -) 'index' and 'time<-' imported from 'zoo' package.
                           -) 'over', 'coordinates<-', 'proj4string<-' imported from 'sp' package.
-        o DESCRIPTION file: 'lattice' package was moved from 'Suggests' to 'Imports' (use of 'levelplot' function in 'matrixplot')
+                          -) 'readShapePoly' imported from 'maptools' package.
+        o DESCRIPTION file: -) 'lattice' package was moved from 'Suggests' to 'Imports' (use of 'levelplot' function in 'matrixplot').
+                            -) 'maptools' package was moved from 'Suggests' to 'Imports' (use of 'readShapePoly' function in 'hydrokrige')
         o 'hypsometric' : fixed (very unusual) error: "Error en integrate(f = f, lower = 0, upper = 1) : maximum number of subdivisions reached"
                           (thanks to Jose Martinez Batlle !)
         o 'extract'     : 'trgt' argument allows multiple months or years to be selected (when 'class(trgt) %in% c("integer", "numeric")')
