--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@ NEWS/ChangeLog for hydroTSM
                           -) 'index' and 'time<-' imported from 'zoo' package.
                           -) 'over', 'coordinates<-', 'proj4string<-' imported from 'sp' package.
                           -) 'readShapePoly' imported from 'maptools' package.
+                          -) Fifty three (53) S3 methods are now registered.
         o DESCRIPTION file: -) 'sp' now requires version >= 1.1-0, because 'overlay' was deprecated in that version of 'sp'
                  TODO       !!!       -) 'xts' now requires version >= 0.9-8, because the new plot.xts is based on quantmod::chart_Series graphics engine.
                             -) 'lattice' package was moved from 'Suggests' to 'Imports' (use of 'levelplot' function in 'matrixplot').
