--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ NEWS/ChangeLog for hydroTSM
 --------------------------
 0.5-0   21-July-2015 (under-development version)
         o repository management moved from SVN to GIT, including rforge.
+        o broken links in documentation were removed.
         o 'hydrokrige'       : -) 'require(maptools)' was replaced by 'requireNamespace("maptools", quietly = TRUE)'
                                -) calls to 'overlay' were replaced by calls to 'over' because 'overaly' was deprecated in 'sp' 1.1-0.
         o 'mspplot   '       : 'require(maptools)' was replace by 'requireNamespace("maptools", quietly = TRUE)'
