--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ NEWS/ChangeLog for hydroTSM
         o broken links in documentation and DESCRIPTION were removed.
         o 'hydrokrige'       : -) 'require(maptools)' was replaced by 'requireNamespace("maptools", quietly = TRUE)'
                                -) calls to 'overlay' were replaced by calls to 'over' because 'overaly' was deprecated in 'sp' 1.1-0.
+                               -) new examples about how to get the interpolated values in each cell and polygon when 'type="both"' is used (thanks to Jochen Scholtes !)
         o 'mspplot   '       : 'require(maptools)' was replace by 'requireNamespace("maptools", quietly = TRUE)'
         o 'hypsometric'      : fixed (very unusual) error: "Error en integrate(f = f, lower = 0, upper = 1) : maximum number of subdivisions reached"
                                (thanks to Jose Martinez Batlle !)
