--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ NEWS/ChangeLog for hydroTSM
 --------------------------
 0.5-0   05-Aug-2015 (under-development version)
         o repository management moved from SVN to GIT, including rforge.
+        o citation with DOI is now possible (and new CITATION file).
         o broken links in documentation and DESCRIPTION were removed.
         o 'hydrokrige'       : -) 'require(maptools)' was replaced by 'requireNamespace("maptools", quietly = TRUE)'
                                -) calls to 'overlay' were replaced by calls to 'over' because 'overaly' was deprecated in 'sp' 1.1-0.
