--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,10 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
-0.5-0   21-May-2016 (under-development version)
+0.5-0   04-Jul-2016 (under-development version)
         o repository management moved from SVN to GIT, including rforge.
   ToDo: o citation with DOI is now possible (and new CITATION file).
-        o broken links in documentation and DESCRIPTION were removed.
+        o new function 'climograph' to draw a climograph based on precipitation and temperature data.
+        o 'subdaily2daily'   : -) now it works with several (all?) FUN functions, including 'sum', 'min', 'max'. (thanks to Jamis Bruening !))
         o 'subdaily2daily'   : -) now it works with several (all?) FUN functions, including 'sum', 'min', 'max'. (thanks to Jamis Bruening !))
         o 'monthlyfunction'  : -) argument '...' is now taken into account.
         o 'seasonalfunction' : -) argument '...' is now taken into account.
@@ -18,6 +19,7 @@ NEWS/ChangeLog for hydroTSM
         o 'fdc'              : -) 'cex.lab'  argument is working now (thanks to Elcin Tan !).
                                -) new example about computing streamflow values corresponding to a given percentage of time equalled or exceeded (thanks to Prajjwal Panday !) 
         o 'daily2annual.zoo' : -) fixed bug appeared in R 3.2.x (or 3.1.2) which raised an error for data.frames when 'out.fmt="%Y"': Error in format.default(structure(as.character(x), names = names(x), dim = dim(x),  : 
+        o 'drawTimeAxis      : -) new argument 'mgp' to provide greater flexibility.
         o NAMESPACE file     : -) several functions explicitly imported from the c(stats, utils, methods, graphics, grDevices) to be compatible with R 3.3.0.
                                -) 'plot.xts' imported from 'xts' package.
                                -) 'index' and 'time<-' imported from 'zoo' package.
